feat: 引入 Vue Router 並新增首頁與購物車頁面，將商品列表邏輯移至 Home 頁面, 同在首頁圖片指標改為pointer

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "type": "commonjs",
   "dependencies": {
     "vue": "^2.6.14",
+    "vue-router": "^3.6.5",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
