--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
-    "vue": "^2.6.14",
+    "vue": "2.6.14",
     "vue-router": "^3.6.5",
     "vuex": "^3.6.2"
   },
